<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:gravity="end"
        android:minWidth="35dp"
        android:text="@string/other_placeholder_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_placeholder_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/et_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_placeholder_email" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/ib_user_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|end"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/other_desc_delete"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_delete" />
</LinearLayout>